// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KonnectorUpdateInfos should render 1`] = `
<InfosMigration
  actionButton={
    <KonnectorUpdateLinker
      konnector={
        Object {
          "slug": "test-konnector",
        }
      }
      label="infos.konnectorUpdate.button.label"
    />
  }
  text="infos.konnectorUpdate.body.regular"
  title="infos.konnectorUpdate.title"
/>
`;

exports[`KonnectorUpdateInfos should render as blocking 1`] = `
<InfosMigration
  actionButton={
    <KonnectorUpdateLinker
      isBlocking={true}
      konnector={
        Object {
          "slug": "test-konnector",
        }
      }
      label="infos.konnectorUpdate.button.label"
    />
  }
  isImportant={true}
  text="infos.konnectorUpdate.body.blocking"
  title="infos.konnectorUpdate.title"
/>
`;
